--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="sure_app_exit">确认退出美业销帮？</string>
     <string name="center_msg">消息中心</string>
     <string name="help_center">帮助中心</string>
-    <string name="mind">我的</string>
+    <string name="mine">我的</string>
     <string name="advice">平台建议</string>
     <string name="invitation_friend">邀请好友</string>
+    <string name="invitation_helper">联系客服</string>
 </resources>
