--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="invittation_rule">活动规则</string>
     <string name="can_appointment">可预约</string>
     <string name="shopper_appoint">美导预约</string>
+    <string name="agent">经纪人</string>
+    <string name="appointment">预约</string>
 </resources>
