完善 美导预约界面：新增日程时间dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="shopper_appoint">美导预约</string>
     <string name="agent">经纪人</string>
     <string name="appointment">预约</string>
+    <string name="i_know">我知道了</string>
 </resources>
