--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="goods_details">商品详情</string>
     <string name="product_details">商品详情</string>
     <string name="consultant">顾问</string>
+    <string name="my_order_all">我的产品订单</string>
 </resources>
