新增 新增登录角色类型

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,8 @@
     <string name="my_order_all">我的产品订单</string>
     <string name="my_integral">我的积分</string>
     <string name="i_want_change">我要兑换</string>
+    <string name="shopper">美导</string>
+    <string name="teacher">讲师</string>
+    <string name="experts">专家</string>
+    <string name="mry">美容院</string>
 </resources>
