新增 积分商城模块

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="please_input_address">请输入详细地址</string>
     <string name="please_select_city">请选择省市区</string>
     <string name="please_input_phone_2">请输入正确的手机号</string>
+    <string name="my_integral_order">我的积分订单</string>
 </resources>
