--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="please_input_phone_2">请输入正确的手机号</string>
     <string name="my_integral_order">我的积分订单</string>
     <string name="no_integral_list">您还没有积分流水</string>
+    <string name="no_recommended_brand">暂无推荐品牌</string>
 </resources>
