新增用户资料修改

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="shopper">美导</string>
     <string name="teacher">讲师</string>
     <string name="experts">专家</string>
+    <string name="brand">品牌</string>
     <string name="mry">美容院</string>
     <string name="integral_mall">积分商城</string>
     <string name="address_manager">地址管理</string>
